tests/snapshots/snapshot_tests__array_partial_init.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_partial_init.vmt",
    status: Panic,
    used_instantiations: [],
}
