tests/snapshots/snapshot_tests__array_partial_init.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_partial_init.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int c i i_next) i) i_next)",
        "(= (Read-Int-Int (Write-Int-Int c i i_next) i) (Read-Int-Int c i))",
        "(= (Read-Int-Int (Write-Int-Int c_next i_next i_next) i) (Read-Int-Int c_next i))",
        "(= (Read-Int-Int (Write-Int-Int c i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int c Z i_next) Z) i_next)",
        "(= (Read-Int-Int (Write-Int-Int c j_next j_next) j_next) j_next)",
        "(= (Read-Int-Int (Write-Int-Int c Z j_next) Z) j_next)",
        "(= (Read-Int-Int (Write-Int-Int c_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!11 Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int c_next Z i) Z) (Read-Int-Int c_next Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!11 Z j) Z) (Read-Int-Int Array-Int-Int!val!11 Z))",
        "(= (Read-Int-Int (Write-Int-Int c Z i_next) Z) (Read-Int-Int c Z))",
        "(= (Read-Int-Int (Write-Int-Int c j_next j_next) j_next) (Read-Int-Int c j_next))",
        "(= (Read-Int-Int (Write-Int-Int c Z j_next) Z) (Read-Int-Int c Z))",
        "(= (Read-Int-Int (Write-Int-Int c i i) i) (Read-Int-Int c i))",
    ],
}
