tests/snapshots/snapshot_tests__array_single_elem.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_single_elem.vmt",
    status: Good,
    used_instantiations: [],
}
