tests/snapshots/snapshot_tests__array_single_elem_increm.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_single_elem_increm.vmt",
    status: Panic,
    used_instantiations: [],
}
